--- a/service_check.ipynb
+++ b/service_check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,7 @@
     "import os\n",
     "import json\n",
     "import time\n",
-    "from typing import List, Tuple\n",
+    "from typing import List, Tuple, Optional\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -33,16 +33,35 @@
     "\n",
     "df_sales_before = df_sales[\n",
     "    df_sales['day'].isin(np.arange(28, 49))\n",
-    "]\n",
-    "\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
     "# получим страты\n",
     "bins = np.linspace(15, 65, 6).astype(int)\n",
     "df_users['age_bin'] = pd.cut(df_users.age, bins=bins)\n",
     "stratum = df_users.groupby(['gender', 'age_bin']).user_id.count() / len(df_users)\n",
     "\n",
+    "app = Flask(__name__)\n",
     "\n",
     "\n",
-    "def _check_test(test):\n",
+    "@app.route('/ping')\n",
+    "def ping():\n",
+    "    return jsonify(status='ok')\n",
+    "\n",
+    "\n",
+    "@app.route('/check_test', methods=['POST'])\n",
+    "def check_test():\n",
+    "    test = json.loads(request.json)['test']\n",
+    "    has_effect = _check_test(test, True)\n",
+    "    return jsonify(has_effect=int(has_effect))\n",
+    "\n",
+    "\n",
+    "def _check_test(test, is_ratio=False):\n",
     "    group_a_one = test['group_a_one']\n",
     "    group_a_two = test['group_a_two']\n",
     "    group_b = test['group_b']\n",
@@ -50,8 +69,29 @@
     "    user_a = group_a_one + group_a_two\n",
     "    user_b = group_b\n",
     "\n",
-    "    a = get_covariate_df(df_sales_test, df_sales_before, user_a, 'user_id', 'sales', 'sales_cov')\n",
-    "    b = get_covariate_df(df_sales_test, df_sales_before, user_b, 'user_id', 'sales', 'sales_cov')\n",
+    "    pvalue = calculate_p_value(df_sales_test, df_sales_before, group_a_one, group_a_two, is_ratio)\n",
+    "    if pvalue < 0.05:\n",
+    "        return False\n",
+    "    pvalue = calculate_p_value(df_sales_test, df_sales_before, user_a, user_b, is_ratio)\n",
+    "\n",
+    "    return pvalue < 0.05\n",
+    "\n",
+    "\n",
+    "def calculate_p_value(df_test: pd.DataFrame, df_before: pd.DataFrame, user_a_list: List, user_b_list: List,\n",
+    "                      is_ratio: bool):\n",
+    "    if is_ratio:\n",
+    "        a, coef = calculate_linearization_metric(df_test, user_a_list, 'user_id', 'sales')\n",
+    "        a_before, coef_before = calculate_linearization_metric(df_before, user_a_list, 'user_id', 'sales')\n",
+    "        b, _ = calculate_linearization_metric(df_test, user_b_list, 'user_id', 'sales', coef)\n",
+    "        b_before, _ = calculate_linearization_metric(df_before, user_b_list, 'user_id', 'sales', coef_before)\n",
+    "    else:\n",
+    "        a = calculate_users_metric(df_test, user_a_list, 'user_id', 'sales')\n",
+    "        a_before = calculate_users_metric(df_before, user_a_list, 'user_id', 'sales')\n",
+    "        b = calculate_users_metric(df_test, user_b_list, 'user_id', 'sales')\n",
+    "        b_before = calculate_users_metric(df_before, user_b_list, 'user_id', 'sales')\n",
+    "\n",
+    "    a = get_covariate_df(a, a_before, 'user_id', 'sales', 'sales_cov')\n",
+    "    b = get_covariate_df(b, b_before, 'user_id', 'sales', 'sales_cov')\n",
     "\n",
     "    a['sales_cuped'], b['sales_cuped'] = calculate_quped_metric(a, b, 'sales', 'sales_cov')\n",
     "\n",
@@ -61,8 +101,7 @@
     "    delta = a_mean - b_mean\n",
     "    std = np.sqrt(a_var / len(a) + b_var / len(b))\n",
     "    statistic = delta / std\n",
-    "    pvalue = (1 - norm.cdf(np.abs(statistic))) * 2\n",
-    "    return pvalue, pvalue < 0.05\n",
+    "    return (1 - norm.cdf(np.abs(statistic))) * 2\n",
     "\n",
     "\n",
     "def calculate_theta(y_control, y_pilot, y_control_cov, y_pilot_cov) -> float:\n",
@@ -81,25 +120,19 @@
     "    return theta\n",
     "\n",
     "\n",
-    "def calculate_users_metrics(df: pd.DataFrame, user_list: List, user_column: str, metric_name: str) -> pd.DataFrame:\n",
+    "def calculate_users_metric(df: pd.DataFrame, user_list: List, user_column: str, metric_name: str) -> pd.DataFrame:\n",
     "    sales = df[\n",
     "        df[user_column].isin(user_list)\n",
-    "    ]\n",
+    "    ].copy()\n",
     "    result = sales.groupby(user_column, as_index=False)[metric_name].sum()\n",
     "    return result\n",
     "\n",
     "\n",
-    "def get_covariate_df(df,\n",
-    "                     df_before,\n",
-    "                     user_list: List,\n",
-    "                     user_column: str,\n",
-    "                     metric_name,\n",
-    "                     renamed_metric_name: str) -> pd.DataFrame:\n",
-    "    result = calculate_users_metrics(df, user_list, user_column, metric_name)\n",
-    "    cov = calculate_users_metrics(df_before, user_list, user_column, metric_name)\n",
-    "    cov.rename(columns={metric_name: renamed_metric_name}, inplace=True)\n",
-    "    result = result.merge(cov, how='left', on=user_column)\n",
-    "    return result\n",
+    "def get_covariate_df(df, df_before, user_column: str, metric_name, renamed_metric_name: str)\\\n",
+    "        -> pd.DataFrame:\n",
+    "    df_before.rename(columns={metric_name: renamed_metric_name}, inplace=True)\n",
+    "    df = df.merge(df_before, how='left', on=user_column)\n",
+    "    return df\n",
     "\n",
     "\n",
     "def calculate_quped_metric(a: pd.DataFrame, b: pd.DataFrame, metric_name: str, cov_metric_name: str)\\\n",
@@ -120,12 +153,33 @@
     "    df = df.merge(df_users, how='left', on=user_column)\n",
     "    avg = (df.groupby(stratified_columns)[metric_name].mean() * stratum).sum()\n",
     "    var = (df.groupby(stratified_columns)[metric_name].var() * stratum).sum()\n",
-    "    return avg, var"
-   ]
+    "    return avg, var\n",
+    "\n",
+    "\n",
+    "def calculate_linearization_metric(df: pd.DataFrame, user_list: List, user_column: str, metric_name: str,\n",
+    "                                   coef: Optional[float] = None) -> Tuple[pd.DataFrame, float]:\n",
+    "    sales = df[\n",
+    "        df[user_column].isin(user_list)\n",
+    "    ].copy()\n",
+    "    x = sales.groupby(user_column)[metric_name].sum()\n",
+    "    y = sales.groupby(user_column)[metric_name].count()\n",
+    "    if coef is None:\n",
+    "        coef = np.sum(x) / np.sum(y)\n",
+    "    lin = x - coef * y\n",
+    "    lin = lin.reset_index()\n",
+    "    lin.columns = [user_column, metric_name]\n",
+    "    return lin, coef\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "users_ids = df_sales_test.user_id.unique()\n",
@@ -141,13 +195,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([2135372, 4394350, 3502225, ..., 2092749, 6287380, 4538526],\n      dtype=int64)"
+      "text/plain": "array([6632480, 4434492, 9286092, ..., 3344569, 9147153, 7457058],\n      dtype=int64)"
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "outputs": [],
    "source": [
     "group_a_one = list(users_ids[:len(users_ids)//3])\n",
@@ -183,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "ttest = {'group_a_one': group_a_one,\n",
@@ -199,27 +253,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 3.26 s\n"
+      "Wall time: 2.11 s\n"
      ]
     },
     {
      "data": {
-      "text/plain": "(0.22638455619820874, False)"
+      "text/plain": "False"
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "res = _check_test(ttest)\n",
+    "res = _check_test(ttest, True)\n",
     "res"
    ],
    "metadata": {
@@ -231,13 +285,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "from tqdm.notebook import tqdm\n",
     "\n",
     "\n",
-    "def get_pvalue_samples(size=1000):\n",
+    "def get_pvalue_samples(size=100):\n",
     "    pvalues = []\n",
     "    for _ in tqdm(range(size)):\n",
     "        np.random.shuffle(users_ids)\n",
@@ -247,7 +301,7 @@
     "        ttest = {'group_a_one': group_a_one,\n",
     "                 'group_a_two': group_a_two,\n",
     "                 'group_b': group_b}\n",
-    "        p, _ = _check_test(ttest)\n",
+    "        p = _check_test(ttest, is_ratio=True)\n",
     "        pvalues.append(p)\n",
     "    return pvalues"
    ],
@@ -260,15 +314,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "outputs": [
     {
      "data": {
-      "text/plain": "  0%|          | 0/1000 [00:00<?, ?it/s]",
+      "text/plain": "  0%|          | 0/100 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "2d1329c757044a37a914f81e2408b41d"
+       "model_id": "496e7412a903456588765c84aed80b70"
       }
      },
      "metadata": {},
@@ -281,8 +335,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   }
